@@ -20,6 +20,7 @@
   <property name="has_separator">False</property>
   <signal name="response" handler="OnWindowResponse" last_modification_time="Tue, 04 Jan 2005 17:58:01 GMT"/>
   <signal name="delete_event" handler="OnWindowDeleteEvent" last_modification_time="Tue, 04 Jan 2005 17:58:06 GMT"/>
+  <signal name="size_request" handler="OnSizeRequested" last_modification_time="Sun, 20 Feb 2005 15:33:23 GMT"/>
 
   <child internal-child="vbox">
     <widget class="GtkVBox" id="vbox1">
@@ -98,6 +99,10 @@
 		  <property name="yalign">0.5</property>
 		  <property name="xpad">0</property>
 		  <property name="ypad">0</property>
+		  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+		  <property name="width_chars">-1</property>
+		  <property name="single_line_mode">False</property>
+		  <property name="angle">0</property>
 		</widget>
 		<packing>
 		  <property name="padding">0</property>
